# wishes-surreal-server

./: Cargo.toml  README.md  init_santa.sh
src/: auth.rs  error.rs  main.rs  routes.rs
