[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# Recommended settings by surrealdb
[profile.release]
lto = true
strip = true
opt-level = 3
panic = 'abort'
codegen-units = 1

[dependencies]
actix-web = "4.9.0"
faker_rand = "0.1.1"
rand = "0.8.5"
serde = { version = "1.0.217", features = ["derive"] }
surrealdb = "2.1.4"
thiserror = "2.0.10"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
