[package]
name = "backend"
version = "1.0.0"
edition = "2021"

# Recommended settings by surrealdb
[profile.release]
lto = true
strip = true
opt-level = 3
panic = 'abort'
codegen-units = 1

[dependencies]
actix-web = "4.9.0"
serde = { version = "1.0.217", features = ["derive"] }
surrealdb = { version = "2.1.4", features = ["kv-tikv"] }
thiserror = "2.0.10"
